<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostDetailParticipantActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/postDetailPTb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetStart="0dp">
    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_centerInParent="true"
        android:background="#D9D9D9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/post_title"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="19dp"
            android:gravity="bottom"
            android:text="@string/post_title"
            android:textColor="#3A3A3A"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/count"
            android:background="@drawable/count_box"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="139dp"
            android:text="@string/count"
            android:textColor="#3A3A3A"
            android:textSize="11dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/option"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:background="@drawable/option_box"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="13dp"
            android:text="@string/option"
            android:textColor="#FFFFFF"
            android:textSize="11sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/category"
            android:textColor="#808080"
            android:textSize="12dp"
            android:textFontWeight="400"/>

        <TextView
            android:id="@+id/created_at"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="12dp"
            android:gravity="right|bottom"
            android:text="@string/created_at"
            android:textColor="#808080"
            android:textSize="12dp"
            android:textFontWeight="400" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="22dp"
            android:text="@string/content"
            android:textColor="#3A3A3A"
            android:textSize="14dp"/>
    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="0.7dp"
        android:layout_gravity="center"
        android:layout_marginTop="31dp"
        android:background="#D9D9D9" />

    <LinearLayout
        android:id="@+id/post_writer_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="21dp"
            android:src="@drawable/circle_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginLeft="12dp"
                android:text="@string/user_nickname"
                style="@style/boldFontStyle"
                android:textFontWeight="500"/>

            <TextView
                android:id="@+id/grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/user_addr"
                android:textFontWeight="500"
                android:textSize="13sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="0.7dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#D9D9D9" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#D9D9D9"
        android:layout_marginTop="280dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="322dp"
        android:layout_height="42dp"
        android:background="@drawable/round_button"
        android:layout_marginTop="30dp"
        android:text="참여하기"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:layout_gravity="center"/>
</LinearLayout>