<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NaviActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:id="@+id/mypageTb"
        android:background="@color/white"
        app:contentInsetStart="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="14dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="36dp"
            android:text="@string/mypage"
            android:textColor="#3A3A3A"
            android:textSize="20dp"
            android:textStyle="bold"
            android:includeFontPadding="false"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/mypage_account_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="57dp"
            android:layout_height="57dp"
            android:layout_marginTop="37dp"
            android:layout_marginLeft="21dp"
            android:src="@drawable/circle_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:layout_marginLeft="14dp"
                android:text="@string/user_nickname"
                style="@style/boldFontStyle"/>

            <TextView
                android:id="@+id/grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:text="@string/user_addr"
                android:textFontWeight="500"
                android:textSize="13sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="41dp"
                android:layout_marginLeft="200dp"
                android:src="@drawable/arrow"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="#a0a0a0"
        android:layout_width="380dp"
        android:layout_height="2px" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="27dp"
        android:gravity="bottom"
        android:text="나의 활동"
        android:textColor="#3A3A3A"
        android:textSize="16dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/chat_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="43dp"
            android:paddingLeft="0dp"
            style="?android:borderlessButtonStyle"
            android:text="참여 내역"
            android:textColor="#3A3A3A"
            android:textFontWeight="400"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/post_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="43dp"
            android:paddingLeft="0dp"
            style="?android:borderlessButtonStyle"
            android:text="글 작성 내역"
            android:textColor="#3A3A3A"
            android:textFontWeight="400"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_town"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="43dp"
            android:paddingLeft="0dp"
            style="?android:borderlessButtonStyle"
            android:text="내 동네 설정"
            android:textColor="#3A3A3A"
            android:textFontWeight="400"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="43dp"
            android:paddingLeft="0dp"
            style="?android:borderlessButtonStyle"
            android:text="누적 경고 내역"
            android:textColor="#3A3A3A"
            android:textFontWeight="400"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <View
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="#a0a0a0"
        android:layout_width="380dp"
        android:layout_height="2px" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="27dp"
        android:gravity="bottom"
        android:text="계정"
        android:textColor="#3A3A3A"
        android:textSize="16dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/edit_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="43dp"
            android:paddingLeft="0dp"
            style="?android:borderlessButtonStyle"
            android:text="정보 수정하기"
            android:textColor="#3A3A3A"
            android:textFontWeight="400"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="43dp"
            android:paddingLeft="0dp"
            style="?android:borderlessButtonStyle"
            android:text="로그아웃"
            android:textColor="#3A3A3A"
            android:textFontWeight="400"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/leave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="43dp"
            android:paddingLeft="0dp"
            style="?android:borderlessButtonStyle"
            android:text="탈퇴하기"
            android:textColor="#3A3A3A"
            android:textFontWeight="400"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>
    </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu"
        tools:ignore="MissingConstraints" />
</LinearLayout>